Improve unit tests for XER/PER representations
Un-dummied out failing tests for the XER PER representations and fixed
the issues that were causing them to fail, namely how they handled
null/bad input.